force-app/main/default/objects/Activity/fields/callrecordurl__c.field-meta.xml
<CustomField>
    <fullName>callrecordurl__c</fullName>
    <label>Call Record URL</label>
    <type>Url</type>
</CustomField>