force-app/main/default/objects/Activity/fields/from_number__c.field-meta.xml
<CustomField>
    <fullName>from_number__c</fullName>
    <externalId>true</externalId>
    <label>From Number</label>
    <length>70</length>
    <type>Text</type>
</CustomField>