force-app/main/default/objects/Activity/fields/ivruniqueid__c.field-meta.xml
<CustomField>
    <fullName>ivruniqueid__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>IVR Unique ID</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>