force-app/main/default/objects/Activity/fields/to_number__c.field-meta.xml
<CustomField>
    <fullName>to_number__c</fullName>
    <externalId>true</externalId>
    <label>To Number</label>
    <length>70</length>
    <type>Text</type>
</CustomField>